feat(faas-gateway): delete operations domain
