# pkg/faas/v1/functions.pb.validate.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: faas/v1/functions/functions.proto
+// source: faas/v1/functions.proto
 
-package functionspb
+package faaspb
 
 import (
 	"bytes"
@@ -807,328 +807,6 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ExecuteFunctionRequestValidationError{}
-
-// Validate checks the field values on ExecuteFunctionResponse with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *ExecuteFunctionResponse) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on ExecuteFunctionResponse with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// ExecuteFunctionResponseMultiError, or nil if none found.
-func (m *ExecuteFunctionResponse) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *ExecuteFunctionResponse) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	switch v := m.Result.(type) {
-	case *ExecuteFunctionResponse_InlineResult:
-		if v == nil {
-			err := ExecuteFunctionResponseValidationError{
-				field:  "Result",
-				reason: "oneof value cannot be a typed-nil",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		}
-		// no validation rules for InlineResult
-	case *ExecuteFunctionResponse_ObjectKey:
-		if v == nil {
-			err := ExecuteFunctionResponseValidationError{
-				field:  "Result",
-				reason: "oneof value cannot be a typed-nil",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		}
-		// no validation rules for ObjectKey
-	default:
-		_ = v // ensures v is used
-	}
-
-	if len(errors) > 0 {
-		return ExecuteFunctionResponseMultiError(errors)
-	}
-
-	return nil
-}
-
-// ExecuteFunctionResponseMultiError is an error wrapping multiple validation
-// errors returned by ExecuteFunctionResponse.ValidateAll() if the designated
-// constraints aren't met.
-type ExecuteFunctionResponseMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ExecuteFunctionResponseMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ExecuteFunctionResponseMultiError) AllErrors() []error { return m }
-
-// ExecuteFunctionResponseValidationError is the validation error returned by
-// ExecuteFunctionResponse.Validate if the designated constraints aren't met.
-type ExecuteFunctionResponseValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ExecuteFunctionResponseValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ExecuteFunctionResponseValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ExecuteFunctionResponseValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ExecuteFunctionResponseValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ExecuteFunctionResponseValidationError) ErrorName() string {
-	return "ExecuteFunctionResponseValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e ExecuteFunctionResponseValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sExecuteFunctionResponse.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ExecuteFunctionResponseValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ExecuteFunctionResponseValidationError{}
-
-// Validate checks the field values on ExecuteFunctionMetadata with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *ExecuteFunctionMetadata) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on ExecuteFunctionMetadata with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// ExecuteFunctionMetadataMultiError, or nil if none found.
-func (m *ExecuteFunctionMetadata) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *ExecuteFunctionMetadata) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for ExecutionState
-
-	if all {
-		switch v := interface{}(m.GetCreatedAt()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, ExecuteFunctionMetadataValidationError{
-					field:  "CreatedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, ExecuteFunctionMetadataValidationError{
-					field:  "CreatedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetCreatedAt()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return ExecuteFunctionMetadataValidationError{
-				field:  "CreatedAt",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if all {
-		switch v := interface{}(m.GetStartedAt()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, ExecuteFunctionMetadataValidationError{
-					field:  "StartedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, ExecuteFunctionMetadataValidationError{
-					field:  "StartedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetStartedAt()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return ExecuteFunctionMetadataValidationError{
-				field:  "StartedAt",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if all {
-		switch v := interface{}(m.GetEndedAt()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, ExecuteFunctionMetadataValidationError{
-					field:  "EndedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, ExecuteFunctionMetadataValidationError{
-					field:  "EndedAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetEndedAt()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return ExecuteFunctionMetadataValidationError{
-				field:  "EndedAt",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(errors) > 0 {
-		return ExecuteFunctionMetadataMultiError(errors)
-	}
-
-	return nil
-}
-
-// ExecuteFunctionMetadataMultiError is an error wrapping multiple validation
-// errors returned by ExecuteFunctionMetadata.ValidateAll() if the designated
-// constraints aren't met.
-type ExecuteFunctionMetadataMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ExecuteFunctionMetadataMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ExecuteFunctionMetadataMultiError) AllErrors() []error { return m }
-
-// ExecuteFunctionMetadataValidationError is the validation error returned by
-// ExecuteFunctionMetadata.Validate if the designated constraints aren't met.
-type ExecuteFunctionMetadataValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ExecuteFunctionMetadataValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ExecuteFunctionMetadataValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ExecuteFunctionMetadataValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ExecuteFunctionMetadataValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ExecuteFunctionMetadataValidationError) ErrorName() string {
-	return "ExecuteFunctionMetadataValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e ExecuteFunctionMetadataValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sExecuteFunctionMetadata.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ExecuteFunctionMetadataValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ExecuteFunctionMetadataValidationError{}
 
 // Validate checks the field values on GetFunctionRequest with the rules
 // defined in the proto definition for this message. If any rules are
